# pdoom1

./: .asciiignore  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  =5.0.0  =7.0.0  ACTION_POINTS_BUG_HUNT_COMPLETION.md  ACTION_POINTS_IMPLEMENTATION_REPORT.md  ARCHIVE_COMPLETION_2025-11-03.md  BRANCH_MERGE_EXECUTION_PLAN.md  BRANCH_STRATEGY.md  BUG_SWEEP_SUMMARY.md  CHANGELOG.md  CHANGELOG_v0.9.0.md  CLAUDE.md  COMMAND_STRING_CONTROLLER.md  COMPREHENSIVE_CLEANUP_REPORT_2025-09-28.md  CONFIG_SYSTEM.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS_UPDATE_ANALYSIS.md  CREDITS.md  CRITICAL_GAMEPLAY_BUGS_FIX_SUMMARY.md  DEMO_GUIDE.md  DEMO_HOTFIXES_SUMMARY.md  DEMO_HOTFIX_SUMMARY.md  DEVELOPERGUIDE.md  DOCS_CLEANUP_COMPLETE_2025-11-03.md  DOCS_ORGANIZATION_PLAN.md  ENHANCED_CONTEXT_PROMPT.md  GODOT_README.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LIFT_AND_SHIFT_COMPLETION_SUMMARY.md  MASTER_CLEANUP_REFERENCE.md  MONOLITH_BREAKDOWN_SESSION_2025-09-15_COMPLETION.md  MOUSE_WHEEL_ISSUE_261_RESOLVED.md  Makefile  NEXT_SESSION_HANDOFF.md  (+103 more)
.claude/: settings.local.json
.github/: CODEOWNERS  FUTURE_FEATURES_ISSUE.md  ISSUE_MISSING_FEATURES.md  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  copilot-instructions.md
_website_export/: manifest.json
archive/: ARCHIVE_INDEX.md  README.md
art_prompts/: action_icons_missing.yaml  batch_2_actions_and_ui.yaml  batch_3_backgrounds.yaml  batch_4_terminal_textures.yaml  crt_frame_overlay.yaml  hero_banners.yaml  iconset_round2.yaml  researcher_portraits_pilot.yaml  round3_rerolls.yaml  round3_rerolls_banners.yaml  scene_art_wave2.yaml  ui_icons.json  ui_icons.yaml
assets/: ALPHA_BETA_ROADMAP.md  lab_names.csv
captures/: .gitignore
config/: .gitignore  README.md
configs/: default.json  default.template.json  high_stakes.json
dev-blog/: README.md  config.json  create_entry.py  generate_index.py  index.json  music-session-1.md
docs/: ADDITIONAL_UI_CONTRAST_NOTES.md  AGENT_EFFICIENCY_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_FUNDERS.md  ASCII_COMPLIANCE_REMINDER.md  ASSET_GENERATION_PIPELINE.md  AUTOMATION.md  BACKEND_PRIVACY_ARCHITECTURE.md  BASELINE_SCORING_SYSTEM.md  BRANCHING_STRATEGY.md  BRANCH_CLEANUP_PLAN.md  BRANCH_CLEANUP_REFERENCE.md  BRANCH_STATUS_REPORT.md  BUG_SWEEP_SUMMARY.md  CONFIG_SYSTEM.md  CONTENT_DISTRIBUTION_SYSTEM.md  CONTEXT_WINDOW_SYSTEM.md  CONTRIBUTOR_REWARDS.md  CONTRIBUTOR_SYSTEM.md  CONTROLS.md  CROSS_REPOSITORY_DOCUMENTATION_STRATEGY.md  CUMULATIVE_HASH_VERIFICATION.md  DEAD_CODE_ANALYSIS_REPORT.md  DEMO_GUIDE.md  DEVELOPERGUIDE.md  (+128 more)
(+3785 files in other folders)
