[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[project]
name = "pdoom1"
dynamic = ["version"]
description = "P(Doom) - A strategic laboratory management game"
authors = [{name = "PipFoweraker"}]
requires-python = ">=3.8"
dependencies = [
    "pygame",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]